--- a/app/www/index.html
+++ b/app/www/index.html
@@ -1,6 +1,7 @@
 <html>
   <head></head>
   <body>
-    <h1>Test for XHttp</h1>
+    <h1>Test for XHttp, index.html</h1>
+    <img src="cat.png" width=200 />
   </body>
 </html>
